<resources>
  <string name="app_name">RssReader</string>

  <string name="home">Home</string>
  <string name="bookmarks">Read Later</string>
  <string name="settings">Settings</string>
  <string name="feeds">Feeds</string>
  <string name="theme">Themes</string>
  <!--  Themes-->
  <string name="day_theme">Day</string>
  <string name="night_theme">Night</string>
  <string name="auto_theme">Auto</string>
  <!--  Feeds-->
  <string name="android_developer_blogs">Android Developers Blogs</string>
  <string name="android_developer_medium">Android Developers Medium</string>
  <string name="apple_developers_news">Appel Developers News</string>
  <!--  Home Fragment-->
  <string name="title_home_fragment">All Articles</string>
  <string name="all_articles">All articles</string>
  <string name="total">%s Total</string>
  <string name="date">/ %s</string>
  <!--  ReadLater Fragment-->
  <string name="title_readlater_fragment">Read Later</string>
  <string name="delete_feed">%s Was delete</string>
  <string name="undo">Undo</string>
  <!--  ReadLater Fragment-->
  <string name="title_settings_fragment">Settings</string>
  <!-- Item Icon Title -->
  <string name="title_saved">Saved</string>
  <string name="title_saved_fill">Saved Fill</string>
  <string name="no_read_later">No Read Later stories yet</string>
  <string name="article_will_be_here">The articles you want to read later will be\nhere</string>
  <string name="offline">No internet connection</string>
</resources>