<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
      android:id="@+id/text_theme"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/theme"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <View
      android:id="@+id/divider"
      style="@style/Divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="@+id/text_theme"
      app:layout_constraintTop_toBottomOf="@id/text_theme" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layout_day"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider">

      <ImageView
        android:id="@+id/day"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/light_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/theme_selector" />

      <TextView
        android:id="@+id/day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/day_theme"
        android:textColor="@color/theme_selector"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toTopOf="@+id/day" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layout_night"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/layout_day">

      <ImageView
        android:id="@+id/night"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/theme_selector" />

      <TextView
        android:id="@+id/night_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/night_theme"
        android:textColor="@color/theme_selector"
        app:layout_constraintStart_toEndOf="@+id/night"
        app:layout_constraintTop_toTopOf="@+id/night" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
      android:id="@+id/text_feeds"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/feeds"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/layout_night" />

    <View
      android:id="@+id/divider_feeds"
      style="@style/Divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="5dp"
      app:layout_constraintStart_toStartOf="@+id/text_feeds"
      app:layout_constraintTop_toBottomOf="@id/text_feeds" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layout_feeds"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider_feeds">

      <Switch
        android:id="@+id/switch_blogs"
        style="@style/SwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_developer_blogs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <Switch
        android:id="@+id/switch_apple"
        style="@style/SwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apple_developers_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_blogs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
